# ngp-information-portal

./: .gitignore  README.md  db.sqlite3  dev_runserver.sh  pyproject.toml  ruff.toml
.github/: CODEOWNERS
core/: asgi.py  forms.py  settings.py  urls.py  views.py  widgets.py  wsgi.py
home/: views.py
home/templatetags/: tags.py
profiles/: forms.py  urls.py  views.py
scripts/: generate_new_django_secret.sh
scripts/cron/: deploy.sh
src/: db.sqlite3  manage.py  mkdocs.yml
src/_boilerplates/: portal-template.md
src/core/: settings.py  urls.py
src/docs/: index.md  support.md  tables.md
src/docs/NGP/: index.md
src/docs/Nationella genomikplattformen/: index.md
src/overrides/: main.html
src/public/: 404.html  index.html  sitemap.xml  tags.json
static/css/: forms.css  material-dashboard.css
static/js/: material-dashboard.js
templates/: 404.html  portal-template.md
templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
templates/admin/: actions.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  invalid_setup.html  login.html  object_history.html  pagination.html  search_form.html  submit_line.html
templates/forms/: field.html
templates/includes/: fixed-plugin.html  footer-fullscreen.html  footer.html  navigation.html  sidebar.html
templates/layouts/: base-fullscreen.html  base.html
templates/notifications/: notification.html  notifications-base.html
templates/pages/: index.html
(+19 files in other folders)
