[project]
name = "ngp-information-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.9",
    "psycopg[binary]>=3.3.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.7",
]

[project.scripts]
runserver = "python src/manage.py runserver"
